@@ -1,5 +1,7 @@
 *SVN*
 
+* Honor skipping filters conditionally for only certain actions even when the parent class sets that filter to conditionally be executed only for the same actions. #4522 [Marcel Molina Jr.]
+
 * Delegate xml_http_request in integration tests to the session instance. [Jamis Buck]
 
 * Update the diagnostics template skip the useless '<controller not set>' text. [Nicholas Seckar]
